--- a/game_server/Dockerfile
+++ b/game_server/Dockerfile
@@ -5,16 +5,17 @@ FROM python:3.11
 WORKDIR /app
 
 # Copy the requirements.txt file to the container
-COPY ./app/requirements.txt .
+COPY ./game_server/requirements.txt .
 
 # Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code to the container
-COPY ./app .
+COPY ./game_server ./game_server
+COPY ./common ./common
 
 # Expose the gRPC server's port
 EXPOSE 8080
 
 # Specify the command to run your application
-CMD [ "python", "start-server.py" ]
+CMD [ "python", "game_server/start-server.py" ]
