--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run: Server",
+            "name": "Debug: Server",
             "type": "python",
             "request": "launch",
             "program": "start-server.py",
@@ -13,16 +13,16 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Run: AI Client",
-            "type": "go",
+            "name": "Debug: AI Agent",
+            "type": "python",
             "request": "launch",
-            "mode": "debug",
-            "program": "${workspaceFolder}/ai_client",
-            "env": {},
-            "args": []
-        },        
+            "program": "agent.py",
+            "args": ["ai_agent"],
+            "cwd": "${workspaceFolder}/ai_agent",
+            "console": "integratedTerminal"
+        },
         {
-            "name": "Run: Random Client",
+            "name": "Debug: Random Client",
             "type": "python",
             "request": "launch",
             "program": "start-random-client.py",
@@ -31,7 +31,7 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Run: Console Client",
+            "name": "Debug: Console Client",
             "type": "python",
             "request": "launch",
             "program": "start-console-client.py",
