--- a/ai_agent/Dockerfile.debug
+++ b/ai_agent/Dockerfile.debug
@@ -1,6 +1,8 @@
 # Use the official tensorflow image as the base image
 FROM tensorflow/tensorflow:latest-gpu
 
+RUN pip install debugpy
+
 # Set the working directory inside the container
 WORKDIR /app
 
@@ -16,6 +18,8 @@ COPY ./common ./common
 
 # Expose the gRPC server's port
 EXPOSE 8080
+# Expose the debugpy port
+EXPOSE 5678
 
 # Specify the command to run your application
-CMD [ "python", "ai_agent/start-agent.py" ]
+CMD [ "python", "-m", "debugpy", "--listen", "0.0.0.0:5678", "--wait-for-client",  "ai_agent/start-agent.py" ]
